src/objects/Email_Object__c.object
<CustomObject>
    <description>Holds an email as an record.Has different fields for sender&apos;s mail_address, body, subject.</description>
    <fields>
        <fullName>Body_Of_Email__c</fullName>
        <label>Body Of Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sender_Of_Email__c</fullName>
        <label>Sender Of Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Of_Email__c</fullName>
        <label>Subject Of Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Email Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Body_Of_Email__c</columns>
        <columns>Sender_Of_Email__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>EmailObjectCode</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>